--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "name": "k1low/imgin",
+    "description": "Image manipulation directory",
+    "keywords": [
+        "image manipulation"
+    ],
     "require": {
-        "php": "~5.4",
+        "php": ">=5.3.2",
         "composer/installers": "*",
         "imagine/imagine": "*",
         "nategood/commando": "*"
